# fossology-workflow

./: .gitignore  .gitlab-ci.yml  .release-please.json  .releaserc.yml  .ruff.yml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  pytest-ci.ini  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: fossology-workflow-plantuml.puml
fossology_workflow/: __main__.py  clearing.py  helpers.py  models.py  settings.py
tests/: conftest.py  test_attachments.py  test_get_reuse_upload.py  test_helpers.py  test_normalize_release_names.py  test_releases.py  test_reports.py  test_uploads.py  test_workflow.py
